--- a/src/tpl/izonev/overall/overall.html
+++ b/src/tpl/izonev/overall/overall.html
@@ -79,7 +79,26 @@
                         </a>
                       </li>
                       <li class="line dk"></li>
-                    
+
+                      <!--calo评分-->
+                      <li ui-sref-active="active" >
+                        <a href="#/calo/start">
+                          <i class="glyphicon glyphicon-sound-stereo icon text-warning"></i>
+                          <span class="font-bold">calo评分</span>
+                        </a>
+                      </li>
+                      <li class="line dk"></li>
+
+                      <!--人脸识别-->
+                      <li ui-sref-active="active" >
+                        <a href="#/camera/list">
+                          <i class="glyphicon glyphicon-stats icon text-primary-dker"></i>
+                          <span class="font-bold">人脸识别</span>
+                        </a>
+                      </li>
+                      <li class="line dk"></li>
+
+
                     </ul>
                     <!-- / list -->
                     </nav>
