1.修改input显示字段名称 2.下载模板改成本地下载

--- a/src/tpl/izonev/camera/camera_list.html
+++ b/src/tpl/izonev/camera/camera_list.html
@@ -32,15 +32,15 @@
     <div class="layui-row m_bottom_20">
 
         <div class="layui-col-xs6 layui-col-sm6 layui-col-md3 m_right_10">
-            <div>appId:<input id="appId" type="text" name="title" lay-verify="required" placeholder="请输入appId（必填）"
+            <div>账号ID:<input id="appId" type="text" name="title" lay-verify="required" placeholder="请输入账号ID（必填）"
                               autocomplete="off" class="layui-input"></div>
         </div>
         <div class="layui-col-xs6 layui-col-sm6 layui-col-md3 m_right_10">
-            <div>storeId:<input id="storeId" type="text" name="title" lay-verify="required" placeholder="请输入storeId（必填）"
+            <div>门店ID:<input id="storeId" type="text" name="title" lay-verify="required" placeholder="请输入门店ID（必填）"
                                 autocomplete="off" class="layui-input"></div>
         </div>
         <div class="layui-col-xs6 layui-col-sm6 layui-col-md3">
-            <div>deviceId:<input id="deviceId" type="text" name="title" lay-verify="required" placeholder="请输入deviceId"
+            <div>摄像头ID:<input id="deviceId" type="text" name="title" lay-verify="required" placeholder="请输入摄像头ID"
                                  autocomplete="off" class="layui-input"></div>
         </div>
         <div class="layui-col-xs6 layui-col-sm6 layui-col-md2" style="text-align: center;margin-top: 20px;">
