--- a/src/tpl/izonev/camera/camera_register.html
+++ b/src/tpl/izonev/camera/camera_register.html
@@ -1,28 +1,28 @@
 <div ng-controller="cregisterCtrl" style="margin-top: 20px;">
     <div class="layui-row">
         <div class="layui-col-xs6 layui-col-sm6 layui-col-md3 m_right_10">
-            <div>appId:<input id="appId" type="text" name="title" lay-verify="required" placeholder="请输入appId（必填）"
+            <div>账号ID:<input id="appId" type="text" name="title" lay-verify="required" placeholder="请输入账号ID（必填）"
                               autocomplete="off" class="layui-input"></div>
         </div>
         <div class="layui-col-xs6 layui-col-sm6 layui-col-md3 m_right_10">
-            <div>storeId:<input id="storeId" type="text" name="title" lay-verify="required" placeholder="请输入storeId（必填）"
+            <div>门店ID:<input id="storeId" type="text" name="title" lay-verify="required" placeholder="请输入门店ID（必填）"
                                 autocomplete="off" class="layui-input"></div>
         </div>
     </div>
     <div class="layui-row">
         <div class="layui-col-xs6 layui-col-sm6 layui-col-md3 m_right_10">
-            <div>自定义id:<input id="userId" type="text" name="title" lay-verify="required" placeholder="请输入自定义id"
+            <div>头像ID:<input id="userId" type="text" name="title" lay-verify="required" placeholder="此处为新上传头像ID（非必填）"
                               autocomplete="off" class="layui-input"></div>
         </div>
         <div class="layui-col-xs6 layui-col-sm6 layui-col-md3 m_right_10">
-            <div>自定义描述:<input id="userInfo" type="text" name="title" lay-verify="required" placeholder="请输入自定义描述"
+            <div>头像描述:<input id="userInfo" type="text" name="title" lay-verify="required" placeholder="输入头像描述（非必填）"
                                 autocomplete="off" class="layui-input"></div>
         </div>
     </div>
     <div class="layui-row">
         <div class="layui-col-xs12 layui-col-sm12 layui-col-md2">
-            <button type="button" class="layui-btn btnColor" id="test1">
-                <i class="layui-icon m_right_10">&#xe67c;</i> <span class="uploadText">上传人脸</span>
+            <button type="button" class="layui-btn btnColor upload" id="test1">
+                <i class="layui-icon m_right_10">&#xe67c;</i> <span class="uploadText">上传头像</span>
             </button>
         </div>
         <div class="layui-col-xs12 layui-col-sm12 layui-col-md1">
