--- a/src/tpl/izonev/camera/camera_check.html
+++ b/src/tpl/izonev/camera/camera_check.html
@@ -1,21 +1,21 @@
 <div ng-controller="ccheckCtrl" style="margin-top: 20px;">
     <div class="layui-row ">
         <div class="layui-col-xs6 layui-col-sm6 layui-col-md3 m_right_10">
-            <div>appId:<input id="appId" type="text" name="title" lay-verify="required" placeholder="请输入appId（必填）"
+            <div>账号ID:<input id="appId" type="text" name="title" lay-verify="required" placeholder="请输入appId（必填）"
                               autocomplete="off" class="layui-input"></div>
         </div>
         <div class="layui-col-xs6 layui-col-sm6 layui-col-md3 m_right_10">
-            <div>storeId:<input id="storeId" type="text" name="title" lay-verify="required" placeholder="请输入storeId（必填）"
+            <div>门店ID:<input id="storeId" type="text" name="title" lay-verify="required" placeholder="请输入storeId（必填）"
                                 autocomplete="off" class="layui-input"></div>
         </div>
     </div>
     <div class="layui-row">
         <div class="layui-col-xs6 layui-col-sm6 layui-col-md3 m_right_10">
-            <div>faceid:<input id="faceid" type="text" name="title" lay-verify="required" placeholder="请输入faceid（必填）"
+            <div>头像ID:<input id="faceid" type="text" name="title" lay-verify="required" placeholder="请输入faceid（必填）"
                               autocomplete="off" class="layui-input"></div>
         </div>
         <div class="layui-col-xs6 layui-col-sm6 layui-col-md3 m_top_20">
-            <button class="layui-btn layui-btn-normal" ng-click="findFace()">确定认证</button>
+            <button class="layui-btn layui-btn-normal" ng-click="findFace()">查询</button>
         </div>
 
     </div>
