--- a/src/index.html
+++ b/src/index.html
@@ -67,6 +67,7 @@
 <script type="text/javascript" src="../libs/distpicker/distpicker.data.js"></script>
 <script type="text/javascript" src="../libs/distpicker/distpicker.js"></script>
 <script type="text/javascript" src="../libs/distpicker/main.js"></script>
+<script type="text/javascript" src="../libs/md5/md5.js"></script>
 <!-- App -->
 <script src="js/app.js"></script>
 <script src="js/config.js"></script>
