--- a/src/tpl/izonev/camera/camera_register.html
+++ b/src/tpl/izonev/camera/camera_register.html
@@ -1,11 +1,11 @@
 <div ng-controller="cregisterCtrl" style="margin-top: 20px;">
     <div class="layui-row">
         <div class="layui-col-xs6 layui-col-sm6 layui-col-md3 m_right_10">
-            <div>账号ID:<input id="appId" type="text" name="title" lay-verify="required" placeholder="请输入账号ID（必填）"
+            <div>账号ID:<input id="appId" type="text" name="title" lay-verify="required" appId="{{appIdS}}" placeholder="{{appIdS}}"
                               autocomplete="off" class="layui-input"></div>
         </div>
         <div class="layui-col-xs6 layui-col-sm6 layui-col-md3 m_right_10">
-            <div>门店ID:<input id="storeId" type="text" name="title" lay-verify="required" placeholder="请输入门店ID（必填）"
+            <div>门店ID:<input id="storeId" type="text" name="title" lay-verify="required" storeId="{{storeidS}}" placeholder="{{storeidS}}"
                                 autocomplete="off" class="layui-input"></div>
         </div>
     </div>
